--- a/main.html
+++ b/main.html
@@ -10,10 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h1>Time, Space, Complexity</h1>
-	<p>Time complexity, efficient</p>
-	<p>Space Complexity, O(n)</p>
-	<b>Space Complexity</b>
+	<h1>Time, Space, and Complexity</h1>
+    <p>Time complexity is a concept in computer science that deals with the efficiency of algorithms in terms of time consumption.</p>
+    <p><b>Space Complexity</b> is another important aspect of algorithm design and it refers to the amount of memory an algorithm needs in relation to the size of the input (O(n)).</p>
 
 </body>
 
